// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterActions /> should render disabled properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  color: #d6680b;
}

.emotion-2 {
  opacity: 1;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3:hover svg,
.emotion-3.focus-visible:focus svg {
  opacity: 1;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-3:hover svg,
.emotion-3.focus-visible:focus svg {
  color: #ffffff;
}

.emotion-4 {
  opacity: 0;
}

<div
  className="emotion-0"
>
  <button
    aria-label="Enable Filter"
    className="emotion-1"
    onClick={[Function]}
    title="Enable Filter"
    type="button"
  >
    <svg
      className="emotion-2"
      color="#d6680b"
      data-file-name="hidden.svg"
      height={20}
    />
  </button>
  <button
    aria-label="Delete Filter"
    className="emotion-3"
    onClick={[Function]}
    title="Delete Filter"
    type="button"
  >
    <svg
      className="emotion-4"
      color="#808080"
      data-file-name="cross.svg"
      height={20}
    />
  </button>
</div>
`;

exports[`<FilterActions /> should render properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  color: #ffffff;
}

.emotion-2 {
  opacity: 0;
}

.emotion-4 {
  opacity: 0;
}

<div
  className="emotion-0"
>
  <button
    aria-label="Disable Filter"
    className="emotion-1"
    onClick={[Function]}
    title="Disable Filter"
    type="button"
  >
    <svg
      className="emotion-2"
      color="#808080"
      data-file-name="hidden.svg"
      height={20}
    />
  </button>
  <button
    aria-label="Delete Filter"
    className="emotion-1"
    onClick={[Function]}
    title="Delete Filter"
    type="button"
  >
    <svg
      className="emotion-4"
      color="#808080"
      data-file-name="cross.svg"
      height={20}
    />
  </button>
</div>
`;

exports[`<FilterActions /> should render properly 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  color: #ffffff;
}

.emotion-2 {
  opacity: 0;
}

.emotion-4 {
  opacity: 0;
}

<div
  className="emotion-0"
>
  <button
    aria-label="Disable Filter"
    className="emotion-1"
    onClick={[Function]}
    title="Disable Filter"
    type="button"
  >
    <svg
      className="emotion-2"
      color="#808080"
      data-file-name="hidden.svg"
      height={20}
    />
  </button>
  <button
    aria-label="Delete Filter"
    className="emotion-1"
    onClick={[Function]}
    title="Delete Filter"
    type="button"
  >
    <svg
      className="emotion-4"
      color="#808080"
      data-file-name="cross.svg"
      height={20}
    />
  </button>
</div>
`;

exports[`<FilterActions /> should render properly 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  color: #ffffff;
}

.emotion-2 {
  opacity: 0;
}

.emotion-4 {
  opacity: 0;
}

<div
  className="emotion-0"
>
  <button
    aria-label="Disable Filter"
    className="emotion-1"
    onClick={[Function]}
    title="Disable Filter"
    type="button"
  >
    <svg
      className="emotion-2"
      color="#808080"
      data-file-name="hidden.svg"
      height={20}
    />
  </button>
  <button
    aria-label="Delete Filter"
    className="emotion-1"
    onClick={[Function]}
    title="Delete Filter"
    type="button"
  >
    <svg
      className="emotion-4"
      color="#808080"
      data-file-name="cross.svg"
      height={20}
    />
  </button>
</div>
`;
